--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 node_modules
+dist
+.env
+.env.local
+.env.development
+.env.development.local
+.env.test
+.env.test.local
+.env.production
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+.pnp.*
+.yarn/*
+.yarn/
+.pnp.cjs
